--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@
 /Floozy.Sample/bin/Debug/netstandard2.0
 /Floozy.Sample/obj
 /Floozy.Sample/bin/Debug/netcoreapp2.0
+/Floozy.Console/bin/Debug/netcoreapp2.0
+/Floozy.Console/obj
